Add ability to override Analytical.track() and Analytical.event() JS helpers per module

--- a/app/views/application/_analytical_javascript.html.erb
+++ b/app/views/application/_analytical_javascript.html.erb
@@ -1,11 +1,11 @@
 <script type="text/javascript">
 var Analytical = {
   track: function(page) {
-<%= raw analytical.now.track('__PAGE__').gsub(/"__PAGE__"/,'page') %>
+<%= raw analytical.now.track_javascript %>
   },
   event: function(name, data) {
     if (typeof data === 'undefined') { data = {}; }
-<%= raw analytical.now.event('__EVENT__', {}).gsub(/"__EVENT__"/,'name').gsub(/"?\{\}"?/,'data') %>
+<%= raw analytical.now.event_javascript %>
   }
 };
 </script>
